<resources>
    <string name="app_name" translatable="false">ADEasy</string>

    <string name="show_video">show video</string>
    <string name="show_ins_video">show interstitial video</string>
    <string name="show_ins">show interstitial</string>
    <string name="main_bt_next_page">Next Page</string>
    <string name="show_banner">show Banner</string>
    <string name="hide_banner">hide banner</string>
    <string name="show_splash">show Splash</string>
</resources>
