<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btShowVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_video"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btShowInterstitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_ins" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btShowInterstitialVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_ins_video"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btShowBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_banner" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btNextActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_bt_next_page"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <FrameLayout
        android:id="@+id/frameBanner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>